# vernier

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PLAN_4f.md  README.md  RELEASING.md  release-plz.toml  rust-toolchain.toml
.claude/: settings.json
.github/workflows/: aur-publish.yml  ci.yml  release-aarch64.yml  release-flatpak.yml  release-macos.yml  release-plz.yml  release-update-metainfo.yml  release-update-site.yml  release-x86_64.yml  release.yml  workflow-drift-check.yml
assets/icons/: README.md
build-aux/: com.usevernier.Vernier.metainfo.xml  com.usevernier.Vernier.yml
crates/pixelsnap-app/: Cargo.toml
crates/pixelsnap-app/src/: main.rs
crates/pixelsnap-core/: Cargo.toml
crates/pixelsnap-core/src/: aspect.rs  color.rs  edge.rs  geometry.rs  handoff.rs  lib.rs  measurement.rs  settings.rs
crates/pixelsnap-platform/: Cargo.toml
crates/pixelsnap-platform/src/: figma_bridge.rs  lib.rs  macos.rs  tray.rs  types.rs  windows_impl.rs
crates/pixelsnap-platform/src/linux/: mod.rs  screencast.rs  wayland.rs  x11.rs
crates/pixelsnap-ui/: Cargo.toml
crates/pixelsnap-ui/src/: lib.rs  prefs.rs  tray_menu.rs
crates/vernier-app/: Cargo.toml
crates/vernier-app/src/: capture_worker.rs  main.rs
crates/vernier-core/: Cargo.toml
crates/vernier-core/src/: aspect.rs  edge.rs  frame.rs  handoff.rs  lib.rs  measurement.rs  settings.rs
crates/vernier-platform/: Cargo.toml
crates/vernier-platform/src/: figma_bridge.rs  font.rs  hud_render.rs  icon.rs  lib.rs  placement.rs  tray.rs  types.rs
crates/vernier-platform/src/linux/: chord_capture.rs  hotkey.rs  mod.rs  screencast.rs  wayland.rs
crates/vernier-platform/src/macos/: app.rs  capture.rs  handoff_icon.rs  hotkey.rs  keymap.rs  mod.rs  monitor.rs  overlay.rs  screen_recording.rs  tray.rs
crates/vernier-ui/: Cargo.toml
crates/vernier-ui/src/: prefs.rs
docs/plans/: ci-gate-followups.md  macos-modernization-followups.md  soft-edge-localization.md  static-dynamic-hud-split.md
figma-plugin/: README.md  main.js  manifest.json  ui.html
packaging/: install-local.sh  release.sh  vernier.desktop
packaging/aur/: PKGBUILD  README.md  release.sh
packaging/aur-bin/: PKGBUILD
packaging/aur-git/: PKGBUILD
packaging/macos/: Info.plist.template  package.sh  sign-and-notarize.sh
scripts/: gen_appstream_release.py
