[workspace]
resolver = "3"
members = [
    "crates/vernier-core",
    "crates/vernier-platform",
    "crates/vernier-ui",
    "crates/vernier-app",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Jon Kinney <jon@headway.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jondkinney/vernier"
rust-version = "1.85"

[workspace.dependencies]
vernier-core = { path = "crates/vernier-core" }
vernier-platform = { path = "crates/vernier-platform" }
vernier-ui = { path = "crates/vernier-ui" }

anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
toml = "0.8"
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "wayland", "x11", "glow"] }
egui = "0.32"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal", "pollster"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
