[workspace]
resolver = "3"
members = [
    "crates/vernier-core",
    "crates/vernier-platform",
    "crates/vernier-ui",
    "crates/vernier-app",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["Jon Kinney <jon@headway.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jondkinney/vernier"
homepage = "https://usevernier.com"
rust-version = "1.85"

[workspace.dependencies]
# Published on crates.io under the `vernier-rs-*` family because the
# bare `vernier` / `vernier-core` names are taken by an unrelated
# crate. The `package` rename keeps the in-tree Rust names
# (`vernier_core`, …) unchanged, so no source edits are needed.
vernier-core = { package = "vernier-rs-core", path = "crates/vernier-core", version = "0.2.2" }
vernier-platform = { package = "vernier-rs-platform", path = "crates/vernier-platform", version = "0.2.2" }
vernier-ui = { package = "vernier-rs-ui", path = "crates/vernier-ui", version = "0.2.2" }

anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
toml = "0.8"
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "wayland", "x11", "glow"] }
egui = "0.32"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal", "pollster"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
