[package]
name = "vernier-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vernier-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tiny-skia = "0.12"
fontdue = "0.9"
# SVG rendering for third-party app icons (e.g. Satty integration
# card on the Screenshots prefs pane). usvg parses, resvg
# rasterizes onto a tiny-skia pixmap.
resvg = { version = "0.45", default-features = false }
usvg = { version = "0.45", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
calloop = "0.14"
calloop-wayland-source = "0.4"
ashpd = { version = "0.13", features = ["global_shortcuts", "screencast", "pipewire"] }
pipewire = "0.9"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
futures-util = "0.3"
libc = "0.2"
