[package]
name = "vernier-rs"
description = "Native pixel-measurement screen overlay for macOS and Linux/Wayland. Fast, built in Rust. Installs the `vernier` binary."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["measurement", "overlay", "ruler", "wayland", "screenshot"]
categories = ["gui"]

[[bin]]
name = "vernier"
path = "src/main.rs"

[dependencies]
vernier-core = { workspace = true }
vernier-platform = { workspace = true }
vernier-ui = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
image = { workspace = true }
libc = "0.2"
