[package]
name = "vernier-rs-core"
description = "Core algorithms, geometry, and settings for Vernier, the native pixel-measurement screen overlay."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
