[package]
name = "vernier-rs-platform"
description = "Platform abstraction and native overlay backends (macOS, Linux/Wayland) for Vernier."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
vernier-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tiny-skia = "0.12"
fontdue = "0.9"
# Figma plugin bridge: minimal sync WebSocket server on localhost.
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
serde_json = "1"
# SVG rendering for third-party app icons (e.g. Satty integration
# card on the Screenshots prefs pane). usvg parses, resvg
# rasterizes onto a tiny-skia pixmap.
resvg = { version = "0.45", default-features = false }
usvg = { version = "0.45", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
ashpd = { version = "0.13", features = ["global_shortcuts", "screencast", "pipewire"] }
pipewire = "0.9"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
futures-util = "0.3"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "block2",
    "SCShareableContent",
    "objc2-core-graphics",
] }
