[package]
name = "vernier-rs-ui"
description = "egui-based preferences window for Vernier, the native pixel-measurement screen overlay."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
vernier-core = { workspace = true }
vernier-platform = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
